--- a/interactivemedia/assignment1/index.html
+++ b/interactivemedia/assignment1/index.html
@@ -3,13 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Interactive Media Assignment</title>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <header>
-      <h1>Interactive Media Assignment</h1>
-      <h2>Frank Gehry: Spinning Tales (Getty)</h2>
-    </header>
+    <div class="titlebox">
+      <header>
+        <h1>Interactive Media Assignment</h1>
+        <h2>Frank Gehry: Spinning Tales (Getty)</h2>
+      </header>
+    </div>
+   
     <main>
       <h3>1. First Impression</h3>
       <p>
