--- a/studio/Assignment1/index.html
+++ b/studio/Assignment1/index.html
@@ -8,6 +8,7 @@
         <!-- <link rel="stylesheet" href="style copy.css"> -->
        <link rel="stylesheet" href="style.css">
     </head>
+    <!-- Github problems be gone -->
 <body>
     <div class="container" >
         <!-- 1) TITLE PAGE -->
