--- a/studio/assignment1/index.html
+++ b/studio/assignment1/index.html
@@ -13,7 +13,7 @@
     <div class="container" >
         <!-- 1) TITLE PAGE -->
         <header>
-        <div class=" item item1 ">
+        <div class=" item item1 "id="item1">
             <div class="window">
                 <div class="title-bar">
                     <div class="title-bar-text">ORB.Farm - Software Analysis</div>
@@ -32,6 +32,7 @@
                     <div class="studio-title">
                         <h2>Digital Media Studio 3-5</h2>
                         <h4>Mediated Expression: Interaction design in creative tool making</h4>
+                        <a href="#item2" class="next-button">Click for next</a>
                     </div>
                     <img src="daphniaAlpha.gif" class="flipped" alt="gif2">
                 </div>
@@ -44,7 +45,7 @@
         </div>
         </header>   
         <!-- 2) GENRE CLASSIFACTION -->
-        <div class=" item item2 ">
+        <div class=" item item2 "id="item2">
             <div class="window">
                 <div class="title-bar">
                     <div class="title-bar-text">ORB.Farm - Genre Classifications</div>
@@ -57,18 +58,19 @@
                     </div>
                 <div class="gif-bar">
                     <img src="daphniaAlpha.gif" alt="gif1">
+                    <a href="#item3" class="next-button">Click for next</a>
                     <img src="daphniaAlpha.gif" class="flipped" alt="gif2">
                 </div>
                 <div class="status-bar">
                     <p class="status-bar-field">By Uma Bridges</p>
                     <p class="status-bar-field">RMIT</p>
-                    <p class="status-bar-field">Bachelor of Design (Digital Media)</p>
+                    <p class="status-bar-field">Page : 2 / 12</p>
                 </div>
 
             </div>
         </div>
         <!-- 3) COMPARABLE SOFTWARE -->
-        <div class="item item3">
+        <div class="item item3"id="item3">
             <div class="window">
                 <div class="title-bar">
                     <div class="title-bar-text">ORB.Farm - Comparable Software</div>
@@ -93,23 +95,25 @@
                   
                 <div class="gif-bar">
                     <img src="daphniaAlpha.gif" alt="gif1">
+                    <a href="#item4" class="next-button">Click for next</a>
                     <img src="daphniaAlpha.gif" class="flipped" alt="gif2">
                 </div>
                 <div class="status-bar">
                     <p class="status-bar-field">By Uma Bridges</p>
                     <p class="status-bar-field">RMIT</p>
-                    <p class="status-bar-field">Bachelor of Design (Digital Media)</p>
+                    <p class="status-bar-field">Page : 3 / 12</p>
                 </div>
 
             </div>
         </div>  
         <!-- 4) CORE MECHANICS -->
-        <div class="item item4">
+        <div class="item item4"id="item4">
             <div class="window">
                 <div class="title-bar">
                     <div class="title-bar-text">ORB.Farm - Core Interactions & Mechanics </div>
                 </div>
                     <div class="window-body">
+                        <img src="screenshot.png" alt="boxthing" class="centered-image">
                         <ul class="tree-view">
                             <li><strong>ORB.Farms Interactive Features & Mechanics:</strong></li>
                             <li>
@@ -188,17 +192,18 @@
                     </div>
                     <div class="gif-bar">
                         <img src="daphniaAlpha.gif" alt="gif1">
+                        <a href="#item5" class="next-button">Click for next</a>
                         <img src="daphniaAlpha.gif" class="flipped" alt="gif2">
                     </div>
                 <div class="status-bar">
                     <p class="status-bar-field">By Uma Bridges</p>
                     <p class="status-bar-field">RMIT</p>
-                    <p class="status-bar-field">Bachelor of Design (Digital Media)</p>
+                    <p class="status-bar-field">Page : 4 / 12</p>
                 </div>
             </div>
         </div>       
         <!-- 5) ASETHETIC CONTEXT -->
-        <div class="item item5">
+        <div class="item item5"id="item5">
             <div class="window">
                 <div class="title-bar">
                     <div class="title-bar-text">ORB.Farm - Creative Influences & Aesthetic Context </div>
@@ -212,17 +217,18 @@
                     </div>
                     <div class="gif-bar">
                         <img src="daphniaAlpha.gif" alt="gif1">
+                        <a href="#item6" class="next-button">Click for next</a>
                         <img src="daphniaAlpha.gif" class="flipped" alt="gif2">
                     </div>
                 <div class="status-bar">
                     <p class="status-bar-field">By Uma Bridges</p>
                     <p class="status-bar-field">RMIT</p>
-                    <p class="status-bar-field">Bachelor of Design (Digital Media)</p>
+                    <p class="status-bar-field">Page : 5 / 12</p>
                 </div>
             </div>
         </div> 
         <!-- 6) GENRE DEFINING-->
-        <div class="item item6">
+        <div class="item item6"id="item6">
             <div class="window">
                 <div class="title-bar">
                     <div class="title-bar-text"> ORB.Farm - Genre Defining Features </div>
@@ -297,17 +303,18 @@
                      </div>
                 <div class="gif-bar">
                     <img src="daphniaAlpha.gif" alt="gif1">
-                     <img src="daphniaAlpha.gif" class="flipped" alt="gif2">
+                    <a href="#item7" class="next-button">Click for next</a>
+                    <img src="daphniaAlpha.gif" class="flipped" alt="gif2">
                 </div>
                 <div class="status-bar">
                     <p class="status-bar-field">By Uma Bridges</p>
                     <p class="status-bar-field">RMIT</p>
-                    <p class="status-bar-field">Bachelor of Design (Digital Media)</p>
+                    <p class="status-bar-field">Page : 6 / 12</p>
                 </div>
             </div>
         </div>
         <!-- 7) NOVEL FEATURES -->
-        <div class="item item7">
+        <div class="item item7"id="item7">
             <div class="window">
                 <div class="title-bar">
                     <div class="title-bar-text"> ORB.Farm - Novel Features </div>
@@ -378,17 +385,18 @@
                      </div>
                 <div class="gif-bar">
                     <img src="daphniaAlpha.gif" alt="gif1">
+                    <a href="#item8" class="next-button">Click for next</a>
                     <img src="daphniaAlpha.gif" class="flipped" alt="gif2">
                  </div>
                 <div class="status-bar">
                     <p class="status-bar-field">By Uma Bridges</p>
                     <p class="status-bar-field">RMIT</p>
-                    <p class="status-bar-field">Bachelor of Design (Digital Media)</p>
+                    <p class="status-bar-field">Page : 7 / 12</p>
                 </div>
             </div>
         </div>
         <!-- 8) MISSING FEAUTURES -->
-        <div class="item item8">
+        <div class="item item8"id="item8">
             <div class="window">
                 <div class="title-bar">
                     <div class="title-bar-text"> ORB.Farm - Missing or Expected Features </div>
@@ -478,17 +486,18 @@
                   
                 <div class="gif-bar">
                     <img src="daphniaAlpha.gif" alt="gif1">
+                    <a href="#item9" class="next-button">Click for next</a>
                     <img src="daphniaAlpha.gif" class="flipped" alt="gif2">
                 </div>
                 <div class="status-bar">
                     <p class="status-bar-field">By Uma Bridges</p>
                     <p class="status-bar-field">RMIT</p>
-                    <p class="status-bar-field">Bachelor of Design (Digital Media)</p>
+                    <p class="status-bar-field">Page : 8 / 12</p>
                 </div>
             </div>
         </div>  
         <!-- 9) TARGET AUDIENCE -->
-        <div class="item item9">
+        <div class="item item9"id="item9">
             <div class="window">
                 <div class="title-bar">
                     <div class="title-bar-text"> ORB.Farm - Target Audience & Niche </div>
@@ -500,17 +509,18 @@
                     </div>
                 <div class="gif-bar">
                     <img src="daphniaAlpha.gif" alt="gif1">
+                    <a href="#item10" class="next-button">Click for next</a>
                     <img src="daphniaAlpha.gif" class="flipped" alt="gif2">
                 </div>
                 <div class="status-bar">
                     <p class="status-bar-field">By Uma Bridges</p>
                     <p class="status-bar-field">RMIT</p>
-                    <p class="status-bar-field">Bachelor of Design (Digital Media)</p>
+                    <p class="status-bar-field">Page : 9 / 12</p>
                 </div>
             </div>
         </div>
    <!-- 10) PAIN POINTS -->
-        <div class="item item10">
+        <div class="item item10"id="item10">
             <div class="window">
                 <div class="title-bar">
                     <div class="title-bar-text">ORB.Farm - Pain Points & Frustrations</div>
@@ -527,17 +537,18 @@
                     </div>
                 <div class="gif-bar">
                     <img src="daphniaAlpha.gif" alt="gif1">
+                    <a href="#item11" class="next-button">Click for next</a>
                     <img src="daphniaAlpha.gif" class="flipped" alt="gif2">
                 </div>
                 <div class="status-bar">
                     <p class="status-bar-field">By Uma Bridges</p>
                     <p class="status-bar-field">RMIT</p>
-                    <p class="status-bar-field">Bachelor of Design (Digital Media)</p>
+                    <p class="status-bar-field">Page : 10 / 12</p>
                 </div>
             </div>
         </div>
         <!-- 11) ENJOYABLE ASPECTS -->
-        <div class="item item11">
+        <div class="item item11"id="item11">
             <div class="window">
                 <div class="title-bar">
                     <div class="title-bar-text">ORB.Farm - Enjoyable Aspects</div>
@@ -554,17 +565,18 @@
                 </div>
                 <div class="gif-bar">
                     <img src="daphniaAlpha.gif" alt="gif1">
+                    <a href="#item12" class="next-button">Click for next</a>
                     <img src="daphniaAlpha.gif" class="flipped" alt="gif2">
                 </div>
                 <div class="status-bar">
                     <p class="status-bar-field">By Uma Bridges</p>
                     <p class="status-bar-field">RMIT</p>
-                    <p class="status-bar-field">Bachelor of Design (Digital Media)</p>
+                    <p class="status-bar-field">Page : 11 / 12</p>
                 </div>
             </div>
         </div>
         <!-- 12) VIDEO -->
-        <div class="item item12">
+        <div class="item item12"id="item12">
             <div class="window">
                 <div class="title-bar">
                     <div class="title-bar-text">ORB.Farm - Intial Game Play (Video)</div>
@@ -574,12 +586,13 @@
             </div>
             <div class="gif-bar">
                 <img src="daphniaAlpha.gif" alt="gif1">
+                <a href="#item1" class="next-button">Back to start</a>
                 <img src="daphniaAlpha.gif" class="flipped" alt="gif2">
             </div>
                 <div class="status-bar">
                     <p class="status-bar-field">By Uma Bridges</p>
                     <p class="status-bar-field">RMIT</p>
-                    <p class="status-bar-field">Bachelor of Design (Digital Media)</p>
+                    <p class="status-bar-field">Page : 12 / 12</p>
                 </div>
             </div>  
         </div>
