--- a/interactivemedia/assignment1/index.html
+++ b/interactivemedia/assignment1/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <div class="titlebox">
+    <div class="titlebox box1">
       <header>
         <h1>Interactive Media Assignment</h1>
         <h2>Frank Gehry: Spinning Tales (Getty)</h2>
@@ -17,7 +17,7 @@
     </div>
 
     <main>
-      <div class="box">
+      <div class="box box2">
         <h3>1. First Impression</h3>
         <p>
           I immediately noticed the animation and movement on the initial
@@ -27,7 +27,7 @@
           apply similar techniques to my own web projects?"
         </p>
       </div>
-      <div class="box">
+      <div class="box box3">
         <h3>2. Two-Minute Interaction Breakdown</h3>
         <p>
           Website Prompt My Action Website Response Website starts with credits
@@ -49,7 +49,7 @@
           the exact angle of the 3D view, adding an educational layer
         </p>
       </div>
-      <div class="box">
+      <div class="box box4">
         <h3>3. Most Engaging Part</h3>
         <p>
           The 3D model of the concert hall was the most engaging. The ability to
@@ -57,7 +57,7 @@
           made the connection between digital and physical space feel seamless.
         </p>
       </div>
-      <div class="box">
+      <div class="box box5">
         <h3>4. Most Common Action</h3>
         <p>
           Scrolling was the most frequent action. While it allowed fast
@@ -65,7 +65,7 @@
           structured experience.
         </p>
       </div>
-      <div class="box">
+      <div class="box box6">
         <h3>5. Primary Goal</h3>
         <p>
           The website aims to educate and immerse users in the design philosophy
@@ -73,14 +73,14 @@
           Concert Hall.
         </p>
       </div>
-      <div class="box">
+      <div class="box box7">
         <h3>6. Communicating the Goal</h3>
         <p>
           Cutting-edge visual effects, layered storytelling, and interactivity
           mirror the monumental nature of the building itself.
         </p>
       </div>
-      <div class="box">
+      <div class="box box8">
         <h3>7. Interaction Over Time</h3>
         <p>
           The website is a one-time deep-dive experience rather than a regularly
@@ -88,41 +88,41 @@
           reference.
         </p>
       </div>
-      <div class="box">
+      <div class="box box9">
         <h3>8. Long-Term Interaction Communication</h3>
         <p>
           The structured, linear storytelling encourages full engagement in a
           single sitting rather than returning multiple times.
         </p>
       </div>
-      <div class="box">
+      <div class="box box10">
         <h3>9. Media References</h3>
         <p>
           Virtual museum exhibits Architectural visualization tools Documentary
           filmmaking
         </p>
       </div>
-      <div class="box">
+      <div class="box box11">
         <h3>10. Impact of Media References</h3>
         <p>
           Encourages an active, exploratory approach rather than passive
           consumption.
         </p>
       </div>
-      <div class="box">
+      <div class="box box12">
         <h3>11. Emotional Impact</h3>
         <p>
           Creates curiosity and inspiration, making architecture feel dynamic.
         </p>
       </div>
-      <div class="box">
+      <div class="box box13">
         <h3>12. Most Frustrating Aspect</h3>
         <p>
           Some interactive icons on the 3D model could only be clicked from
           certain angles, causing slight usability friction.
         </p>
       </div>
-      <div class="box">
+      <div class="box box14">
         <h3>13. Most Satisfying Aspect</h3>
         <p>
           The timing and interactivity were engaging, making what could have
