--- a/interactivemedia/week4/index.html
+++ b/interactivemedia/week4/index.html
@@ -19,5 +19,15 @@
     <p class="vcenter">
         my paragraph
     </p>
+    <!-- ADD FLEXBOX -->
+    <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel tempora 
+        natus minima sunt, qui animi explicabo architecto vero, assumenda 
+        obcaecati dolor voluptates minus! Dolor officia nemo veritatis sint! 
+        Consectetur, delectus?
+    </p>
+    <p class="vcenter">
+        my paragraph
+    </p>
 </body>
 </html>
