--- a/interactivemedia/assignment1/index.html
+++ b/interactivemedia/assignment1/index.html
@@ -9,14 +9,29 @@
   </head>
 
   <body>
-    <div class="titlebox box1">
+    <div class="box titlebox ">
       <header>
-        <h1>Interactive Media Assignment</h1>
-        <h2>Frank Gehry: Spinning Tales (Getty)</h2>
+        <h1>Frank Gehry</h1>
+        <h2>Walt Disney Concert Hall</h2>
+        <br>
+        <h2>Interactive Media - Assignment 1</h2>
+        <img src="logo.png" alt="logo" class="logo">
+        <h2></h2>
+
       </header>
     </div>
 
     <main>
+      <div class="box box2">
+        <h3>ABOUT</h3>
+        <p>
+          I immediately noticed the animation and movement on the initial
+          loading page and how it reacted to my interactions. The way elements
+          dynamically responded to my presence made the website feel immersive
+          and modern. My first thought was, "How did they do that, and how can I
+          apply similar techniques to my own web projects?"
+        </p>
+      </div>
       <div class="box box2">
         <h3>1. First Impression</h3>
         <p>
