--- a/interactivemedia/assignment1/index.html
+++ b/interactivemedia/assignment1/index.html
@@ -21,48 +21,86 @@
     </div>
 
     <main>
-      <div class="box box2">
+      <div class="box box1">
         <h3>ABOUT</h3>
-        <p>
-          I immediately noticed the animation and movement on the initial
-          loading page and how it reacted to my interactions. The way elements
-          dynamically responded to my presence made the website feel immersive
-          and modern. My first thought was, "How did they do that, and how can I
-          apply similar techniques to my own web projects?"
-        </p>
-
+        <div class="relative">
+              ★☆★
+          </span>
+        </div>
+        <!-- <img src="logo.png" alt="logo" class="logo"> -->
       </div>
       <div class="box box2">
         <h3>1. First Impression</h3>
         <p>
-          I immediately noticed the animation and movement on the initial
-          loading page and how it reacted to my interactions. The way elements
-          dynamically responded to my presence made the website feel immersive
-          and modern. My first thought was, "How did they do that, and how can I
-          apply similar techniques to my own web projects?"
+          I immediately noticed the website has a sense of movement. Sometimes 
+          that movement is done through an animated element, usually a transition,
+         sometimes through scale.
+        </p>
+        <p>
+          Dynamic responses to scrolls, hovers and clicks accompanied by expressive
+          clasic music make the website feel vibrantly immersive and contempary. 
+        </p>        
+        <p>
+          My first impressions while exploring the site where
+          <strong>
+            "How did they do that, and how can I
+            apply similar techniques to my own web projects?"
+            </strong>
         </p>
       </div>
       <div class="box box3">
-        <h3>2. Two-Minute Interaction Breakdown</h3>
-        <p>
-          Website Prompt My Action Website Response Website starts with credits
-          to Frank Gehry and LA Phil Brought my cursor onto the screen A prompt
-          appeared, "Click anywhere to enable sound," which followed my cursor
-          dynamically Clicked to enable sound Clicked the webpage Animated text
-          "Sculpting Harmony" appeared, followed by an educational subtext
-          Hovered over “Sculpting Harmony” Moved the cursor over the text The
-          text stretched, and snippets of Gehry's quotes followed my cursor
-          Prompt: "Scroll for story" Scrolled up and down Aerial footage of the
-          concert hall zoomed in and out, making me question if it was a GIF or
-          interactive video Scrolling further Continued scrolling Storytelling
-          elements unfolded dynamically with visual transitions Arrived at "Ship
-          in the Box" Watched the video A montage of Frank Gehry discussing his
-          design process played Interactive 3D model prompt Clicked to explore
-          the model Opened a detailed, interactive cardboard-like representation
-          of the concert hall interior Icons on the model indicate interactivity
-          Clicked and rotated the model Overlaid actual photographs appeared at
-          the exact angle of the 3D view, adding an educational layer
-        </p>
+        <table border="1" cellpadding="8" cellspacing="0">
+          <thead>
+            <tr>
+              <th>Website Prompt</th>
+              <th>My Action</th>
+              <th>Website Response</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Website starts with credits to Frank Gehry and LA Phil</td>
+              <td>Brought my cursor onto the screen</td>
+              <td>A prompt appeared, "Click anywhere to enable sound," following my cursor</td>
+            </tr>
+            <tr>
+              <td>"Click anywhere to enable sound"</td>
+              <td>Clicked the webpage</td>
+              <td>Animated text "Sculpting Harmony" appeared, followed by an educational subtext</td>
+            </tr>
+            <tr>
+              <td>Hover over “Sculpting Harmony”</td>
+              <td>Moved the cursor over the text</td>
+              <td>The text stretched, and Gehry's quotes followed my cursor</td>
+            </tr>
+            <tr>
+              <td>"Scroll for story"</td>
+              <td>Scrolled up and down</td>
+              <td>Aerial footage zoomed in and out — felt like a GIF or interactive video</td>
+            </tr>
+            <tr>
+              <td>Scrolling further</td>
+              <td>Continued scrolling</td>
+              <td>Dynamic storytelling elements unfolded with smooth visual transitions</td>
+            </tr>
+            <tr>
+              <td>Arrived at "Ship in the Box"</td>
+              <td>Watched the video</td>
+              <td>Montage of Gehry discussing his design process played</td>
+            </tr>
+            <tr>
+              <td>Interactive 3D model prompt</td>
+              <td>Clicked to explore the model</td>
+              <td>Opened interactive cardboard-like model of concert hall interior</td>
+            </tr>
+            <tr>
+              <td>Icons on the model suggest interactivity</td>
+              <td>Clicked and rotated the model</td>
+              <td>Actual photographs overlaid at matching angles, providing educational context</td>
+            </tr>
+          </tbody>
+        </table>
+        
       </div>
       <div class="box box4">
         <h3>3. Most Engaging Part</h3>
