--- a/interactivemedia/assignment1/index.html
+++ b/interactivemedia/assignment1/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Interactive Media Assignment 1234</title>
-    <link rel="uma" sizes="180x180" href="/uma.ico" />
-    <link rel="stylesheet" href="reset.css" />
+    <link rel="shortcut icon" href="uma.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css" />
   </head>
 
@@ -105,6 +104,7 @@
       </div>
       <div class="box box4">
         <h3>3. Most Engaging Part</h3>
+        <div id="3d-model"></div>
         <p>
           The 3D model of the concert hall was the most engaging. The ability to
           manipulate the structure, combined with overlays of real-life imagery,
@@ -187,5 +187,6 @@
     </main>
 
     <footer>Interactive Media Assignment | RMIT Digital Media</footer>
+    <script type="module" src="js/main.js"></script>
   </body>
 </html>
