--- a/interactivemedia/assignment1/index.html
+++ b/interactivemedia/assignment1/index.html
@@ -104,7 +104,7 @@
       </div>
       <div class="box box4">
         <h3>3. Most Engaging Part</h3>
-        <div id="3d-model"></div>
+        <div id="container3D" style="width: 100vw; height: 100vh;"></div>
         <p>
           The 3D model of the concert hall was the most engaging. The ability to
           manipulate the structure, combined with overlays of real-life imagery,
